# iphone-3d-scanner

./: .gitignore  README.md  功能清单.md
scanner/: SETUP_GUIDE.md
scanner/StrayScanner.xcodeproj/: project.pbxproj
scanner/StrayScanner.xcodeproj/xcshareddata/xcschemes/: StrayScanner.xcscheme
scanner/StrayScanner/Controllers/: RecordSessionViewController.swift
scanner/StrayScanner/Helpers/: AppDaemon.swift  CameraRenderer.swift  ConfidenceEncoder.swift  DatasetEncoder.swift  OdometryEncoder.swift  TransferService.swift  VideoEncoder.swift
scanner/StrayScanner/UI/Base.lproj/: LaunchScreen.storyboard
scanner/StrayScanner/Views/: InformationView.swift  NewSession.swift  RecordButton.swift  SessionDetail.swift  SessionList.swift  SessionRow.swift  Theme.swift  TransferService.swift  TransferView.swift
scanner_tool/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
scanner_tool/cli/: __init__.py  main.py
scanner_tool/core/: __init__.py  evaluation.py  export.py  features.py  language.py  pointcloud.py  pose_estimation.py  realtime.py  render.py  training.py  transfer.py  visualization.py
scanner_tool/core/importers/: __init__.py  arkitscenes.py  base.py  replica.py  scanner.py  scannet.py
scanner_tool/gui/: __init__.py  labeling.py
scanner_tool/tests/: __init__.py  test_pose_estimation.py
